# optimalRoutes

./: README.md  pyproject.toml
routes-app/: .gitignore  README.md  alembic.ini  generate_test_data.py  main.py  requirements.txt  test_api.py  test_genetic_api.py  test_genetic_vs_ortools.py  test_integration.py  test_standalone.py
routes-app/api/: __init__.py  router.py  services.py
routes-app/api/models/: __init__.py  courier.py  depot.py  location.py  order.py  route.py
routes-app/api/routes/: __init__.py  courier.py  depot.py  geocoding.py  order.py  route.py
routes-app/api/schemas/: __init__.py  courier.py  depot.py  geocoding.py  location.py  order.py  route.py
routes-app/api/services/: __init__.py  courier_service.py  depot_service.py  genetic_optimizer.py  geocoding_service.py  order_service.py  route_optimizer.py  route_service.py
routes-app/core/: __init__.py  config.py  database.py  settings.py
routes-app/frontend/routes-ui/: README.md  package-lock.json  package.json
routes-app/frontend/routes-ui/routes-ui-v2/: README.md  package-lock.json  package.json
routes-app/frontend/routes-ui/src/: App.vue  main.js
routes-app/frontend/routes-ui/src/views/: CouriersView.vue  DepotsView.vue  MapView.vue  OptimizeView.vue  OrdersView.vue
routes-app/migrations/: env.py
routes-app/services/: __init__.py  genetic_optimizer.py  route_optimizer.py
