[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "routes-app"
version = "0.1.0"
description = "Optimal routes planning application"
authors = ["Your Name <your.email@example.com>"]

readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
numpy = "^1.24.3"
ortools = "^9.6.2534"
pydantic = "^1.10.7"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$' 